--- a/client/package.json
+++ b/client/package.json
@@ -15,7 +15,8 @@
     "@mui/material": "^5.15.4",
     "next": "14.0.4",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "styled-components": "^6.1.8"
   },
   "devDependencies": {
     "@types/node": "^20",
