--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "@mui/icons-material": "^5.15.4",
     "@mui/material": "^5.15.4",
     "@tanstack/react-query": "^4.35.0",
+    "@tanstack/react-query-devtools": "^5.18.1",
     "axios": "^1.6.7",
     "next": "14.0.4",
     "react": "^18",
