--- a/server/.gitignore
+++ b/server/.gitignore
@@ -4,6 +4,7 @@ build/
 !server/gradle/wrapper/gradle-wrapper.jar
 !server/src/main/**/build/
 !server/src/test/**/build/
+gradle/wrapper/gradle-wrapper.properties
 
 ### STS ###
 .apt_generated
