--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -14,12 +14,6 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
-      - name: Configure AWS Credentials
-        uses: aws-actions/configure-aws-credentials@v1
-        with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: ap-northeast-2
       - name: ssh to ec2
         uses: appleboy/ssh-action@master
         with:
@@ -27,8 +21,9 @@ jobs:
           host: ${{ secrets.HOST }} # 내가 변수로 저장한 ip
           username: ${{ secrets.USER }} # 내가 변수로 저장한 User
           script: |
-            cd Github/thinker/server # 내가 Clone한 폴더 안으로 들어간다.
+            cd Github/thinker # 내가 Clone한 폴더 안으로 들어간다.
             git pull # 자동으로 pull해서 주기적 업데이트
-
+            ./gradlew build
+            java -jar build/libs/thinker-0.0.1-SNAPSHOT.jar
   # 깃허브 레파지토리가 프라이빗으로 만들어져 있을때. 
   # git pull https://${{ secrets.GIT_USER }}:${{ secrets.GIT_PASSWORD }}@github.com/blockenters/streamlit_kmeans.git
