--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -1,19 +1,28 @@
-name: CI/CD
+name: Java CI/CD with Gradle
 
-# Controls when the workflow will run
 on:
-  # Triggers the workflow on push or pull request events but only for the main branch
   push:
-    branches:
-      - master
-
+    branches: [ "master" ]
+  pull_request:
+    branches: [ "master" ]
 
 jobs:
- deploy_backend:
+  deploy_backend:
     runs-on: ubuntu-latest
 
     steps:
       - uses: actions/checkout@v2
+      - name: Set up JDK 17
+        uses: actions/setup-java@v4
+        with:
+          java-version: '17'
+          distribution: 'temurin'
+      
+      # Configure Gradle for optimal use in GitHub Actions, including caching of downloaded dependencies.
+      - name: Setup Gradle
+        uses: gradle/actions/setup-gradle@v3.0.0
+
+      # Deploy backend to EC2
       - name: ssh to ec2
         uses: appleboy/ssh-action@master
         with:
@@ -25,5 +34,3 @@ jobs:
             git pull # 자동으로 pull해서 주기적 업데이트
             ./gradlew build
             java -jar build/libs/thinker-0.0.1-SNAPSHOT.jar
-  # 깃허브 레파지토리가 프라이빗으로 만들어져 있을때. 
-  # git pull https://${{ secrets.GIT_USER }}:${{ secrets.GIT_PASSWORD }}@github.com/blockenters/streamlit_kmeans.git
