--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -24,7 +24,7 @@ jobs:
 
       # Deploy backend to EC2
       - name: ssh to ec2
-        uses: appleboy/ssh-action@master
+        uses: appleboy/ssh-action@v0.1.6
         with:
           key: ${{ secrets.SSH_PRIVATE_KEY }} # 내가 변수로 저장한 pem key
           host: ${{ secrets.HOST }} # 내가 변수로 저장한 ip
