--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -32,11 +32,10 @@ jobs:
     - name: Change directory to /server
       run: |
        cd server
-       chmod +x gradlew
 
 
-    - name: Grant execute permission for gradlew # gradlew에 대한 권한 부여 설명
-      run: chmod +x gradlew # gradlew에 대한 권한 부여 설정
+    # - name: Grant execute permission for gradlew # gradlew에 대한 권한 부여 설명
+    #   run: chmod +x gradlew # gradlew에 대한 권한 부여 설정
 
     - name: Build with Gradle # Gradle에 대한 빌드 (일반적으로 기본 설정을 사용)
       uses: gradle/gradle-build-action@bd5760595778326ba7f1441bcf7e88b49de61a25 # v2.6.0
