--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -44,6 +44,11 @@ jobs:
         arguments: build
       #run : ./gradlew clean build
 
+    - name: Build with Gradle
+      run: |
+       cd server
+       ./gradlew build
+
     - name: Upload artifact
       uses: actions/upload-artifact@v2
       with:
