--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -44,9 +44,11 @@ jobs:
     #     arguments: build
       #run : ./gradlew clean build
 
-    - name: Build with Gradle
-      run: |
-       cd server && ./gradlew build
+    - name: Build with Gradle # Gradle에 대한 빌드 (일반적으로 기본 설정을 사용)
+      uses: gradle/gradle-build-action@bd5760595778326ba7f1441bcf7e88b49de61a25 # v2.6.0
+      with:
+        arguments: build
+        build-root-directory: ./server
        
     - name : jar
       run: |
