--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -66,7 +66,7 @@ jobs:
       uses: actions/download-artifact@v2
       with:
         name: testServer
-        path: server/build/libs/ # 배포에 활용할 경로
+        path: server/build/libs/thinker-0.0.1-SNAPSHOT.jar # 배포에 활용할 경로
 
     - name: Deploy to EC2 # EC2를 활용한 배포 설명
       run: | 
