--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -65,7 +65,11 @@ jobs:
 
     steps:
     - name: test
-      run: ls
+      run: |
+       cd server
+       cd build
+       cd libs
+       ls
        
     - name: Download artifact
       uses: actions/download-artifact@v2
