--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -65,7 +65,8 @@ jobs:
       uses: actions/download-artifact@v2
       with:
         name: testServer
-        path: build/libs/thinker-0.0.1-SNAPSHOT.jar # 배포에 활용할 경로
+        build-root-directory: ./server
+        path: build/libs/ # 배포에 활용할 경로
 
     - name: Deploy to EC2 # EC2를 활용한 배포 설명
       run: | 
