--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -49,6 +49,13 @@ jobs:
         arguments: build
         build-root-directory: ./server
 
+    - name: Change directory to /server
+      run: |
+       cd server
+       cd build
+       cd libs
+       ls
+
     - name: Upload artifact
       uses: actions/upload-artifact@v2
       with:
