--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -56,20 +56,11 @@ jobs:
        cd libs
        ls
 
-    # - name: Upload artifact
-    #   uses: actions/upload-artifact@v2
-    #   with:
-    #     name: testServer
-    #     path: build/libs/thinker-0.0.1-SNAPSHOT.jar # 빌드 후 생성할 jar 파일
-
-    - name: Change directory
-      run: cd server/build/libs
-
     - name: Upload artifact
       uses: actions/upload-artifact@v2
       with:
         name: testServer
-        path: thinker-0.0.1-SNAPSHOT.jar
+        path: build/libs/thinker-0.0.1-SNAPSHOT.jar # 빌드 후 생성할 jar 파일
 
   deploy:
     needs: build # 배포를 위해 필요한 과정
@@ -80,7 +71,7 @@ jobs:
       uses: actions/download-artifact@v2
       with:
         name: testServer
-        path: server/build/libs/ # 배포에 활용할 경로
+        # path: server/build/libs/ # 배포에 활용할 경로
 
     - name: Deploy to EC2 # EC2를 활용한 배포 설명
       run: | 
