--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -65,19 +65,22 @@ jobs:
   deploy:
     needs: build # 배포를 위해 필요한 과정
     runs-on: ubuntu-latest # 배포시 사용 환경
+    defaults:
+      run:
+        working-directory: ./server
 
     steps:
     - name: Download artifact
       uses: actions/download-artifact@v2
       with:
         name: testServer
-        path: server/build/libs/ # 배포에 활용할 경로
+        path: build/libs/ # 배포에 활용할 경로
 
     - name: Deploy to EC2 # EC2를 활용한 배포 설명
       run: | 
         echo "${{ secrets.SSH_PRIVATE_KEY }}" > mykey.pem # 사용할 SSH키를 mykey.pem으로 저장
         chmod 600 mykey.pem # mykey.pem를 사용할 수 있도록 권한 설정      
         # 배포할 jar파일 이름 + 사용할 유저 IP (두 과정에서 모두 SSH 유저 정보 명기)
-        scp -i mykey.pem -o StrictHostKeyChecking=no server/build/libs/thinker-0.0.1-SNAPSHOT.jar ${{ secrets.SSH_USER }}@${{ secrets.SERVER_IP }}:/Users/${{ secrets.SSH_USER }}/testServer.jar
+        scp -i mykey.pem -o StrictHostKeyChecking=no build/libs/thinker-0.0.1-SNAPSHOT.jar ${{ secrets.SSH_USER }}@${{ secrets.SERVER_IP }}:/Users/${{ secrets.SSH_USER }}/testServer.jar
         # nohup 활용 (SSH서버 연결이 없어도 서버가 계석 돌기 위함)
         ssh -i mykey.pem -o StrictHostKeyChecking=no ${{ secrets.SSH_USER }}@${{ secrets.SERVER_IP }} "pgrep java | xargs kill -9; nohup java -jar /Users/${{ secrets.SSH_USER }}/testServer.jar > app.log 2>&1 &"
