--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -57,21 +57,18 @@ jobs:
       uses: actions/upload-artifact@v2
       with:
         name: testServer
-        path: build/libs/ # 빌드 후 생성할 jar 파일
+        path: build/libs/thinker-0.0.1-SNAPSHOT.jar # 빌드 후 생성할 jar 파일
 
   deploy:
     needs: build # 배포를 위해 필요한 과정
     runs-on: ubuntu-latest # 배포시 사용 환경
-    defaults:
-      run:
-        working-directory: ./server
 
     steps:
     - name: Download artifact
       uses: actions/download-artifact@v2
       with:
         name: testServer
-        path: build/libs/ # 배포에 활용할 경로
+        path: build/ # 배포에 활용할 경로
 
     - name: Deploy to EC2 # EC2를 활용한 배포 설명
       run: | 
