--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -52,6 +52,9 @@ jobs:
     - name: Change directory to /server
       run: |
        cd server
+       cd build
+       cd libs
+       ls
 
     - name: Upload artifact
       uses: actions/upload-artifact@v2
@@ -64,8 +67,6 @@ jobs:
     runs-on: ubuntu-latest # 배포시 사용 환경
 
     steps:
-    - name: check
-      run: ls -R
     - name: Download artifact
       uses: actions/download-artifact@v2
       with:
