--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -74,15 +74,28 @@ jobs:
         name: testServer
         path: server/build/libs # 배포에 활용할 경로
 
-    - name: Build and deploy
+    - uses: actions/checkout@v2
+    - run: touch ./server/src/main/resources/application.properties
+    - run: echo
+
+    - name: Set yml file 
+      uses: microsoft/variable-substitution@v1
+      with:
+        files: ${{ env.RESOURCE_PATH }} 
       env:
-          DB_HOST: ${{ secrets.DB_HOST }}
-          DB_PORT: ${{ secrets.DB_PORT }}
-          DB_USER: ${{ secrets.DB_USER }}
-          DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
-      run: |
-          # 데이터베이스 연결 정보를 환경 변수로 설정
-          export DATABASE_URL="jdbc:mysql://${DB_HOST}:${DB_PORT}/mydatabase?user=${DB_USER}&password=${DB_PASSWORD}"
+        spring.datasource.url: ${{ secrets.DB_HOST }} 
+        spring.datasource.username: ${{ secrets.DB_USERNAME }} 
+        spring.datasource.password: ${{ secrets.DB_PASSWORD }} 
+
+    # - name: Build and deploy
+    #   env:
+    #       DB_HOST: ${{ secrets.DB_HOST }}
+    #       DB_PORT: ${{ secrets.DB_PORT }}
+    #       DB_USER: ${{ secrets.DB_USER }}
+    #       DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
+    #   run: |
+    #       # 데이터베이스 연결 정보를 환경 변수로 설정
+    #       export DATABASE_URL="jdbc:mysql://${DB_HOST}:${DB_PORT}/mydatabase?user=${DB_USER}&password=${DB_PASSWORD}"
 
 
     - name: Deploy to EC2 # EC2를 활용한 배포 설명
