--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -30,6 +30,14 @@ jobs:
           DEV_APPLICATION_YML_FILE_NAME: application.yml
         run: echo $DEV_APPLICATION_YML | base64 --decode > $DEV_APPLICATION_YML_DIR/$DEV_APPLICATION_YML_FILE_NAME
 
+      - name: Change directory to /server
+        run: |
+         cd server
+         cd src
+         cd main
+         cd resources
+         ls
+  
   build:
     needs: create-application-yml
     runs-on: ubuntu-latest #빌드할 환경
