--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -36,9 +36,12 @@ jobs:
           DEV_APPLICATION_YML: ${{ secrets.DB_APPLICATION_YML }}
           DEV_APPLICATION_YML_DIR: server/src/main/resources
           DEV_APPLICATION_YML_FILE_NAME: application.yml
-      run: echo $DEV_APPLICATION_YML | base64 --decode > $DEV_APPLICATION_YML_DIR/$DEV_APPLICATION_YML_FILE_NAME
+      run: |
+        echo $DEV_APPLICATION_YML | base64 --decode > $DEV_APPLICATION_YML_DIR/$DEV_APPLICATION_YML_FILE_NAME
+        chmod 400 server/src/main/resources/application.yml
 
-
+    
+    
     - name: Change directory to /server
       run: |
        cd server
