--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -40,8 +40,9 @@ jobs:
         echo $DEV_APPLICATION_YML | base64 --decode > $DEV_APPLICATION_YML_DIR/$DEV_APPLICATION_YML_FILE_NAME
         chmod 400 server/src/main/resources/application.yml
 
-    
-    
+    - name: Permission about image
+      run: chmod 400 server/image/person.jpeg
+
     - name: Change directory to /server
       run: |
        cd server
