--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -42,6 +42,9 @@ jobs:
 
     - name: Permission about image
       run: |
+       cd server
+       cd image
+       ls
        chmod -R +x server/image
        
     - name: Change directory to /server
