--- a/server/build.gradle
+++ b/server/build.gradle
@@ -39,31 +39,31 @@ dependencies {
     implementation 'mysql:mysql-connector-java:8.0.28'
     runtimeOnly 'mysql:mysql-connector-java'
 
-    //Querydsl 추가
-    implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
-    annotationProcessor "com.querydsl:querydsl-apt:${dependencyManagement.importedProperties['querydsl.version']}:jakarta"
-    annotationProcessor 'jakarta.persistence:jakarta.persistence-api:3.1.0'
-    // Add Jakarta Persistence API dependency
+//    //Querydsl 추가
+//    implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
+//    annotationProcessor "com.querydsl:querydsl-apt:${dependencyManagement.importedProperties['querydsl.version']}:jakarta"
+//    annotationProcessor 'jakarta.persistence:jakarta.persistence-api:3.1.0'
+//    // Add Jakarta Persistence API dependency
 }
 
 tasks.named('test') {
     useJUnitPlatform()
 }
 
-configurations {
-    compileOnly {
-        extendsFrom annotationProcessor
-    }
-}
-
-sourceSets {
-    main {
-        java {
-            srcDir 'target/generated-sources/java' // Output directory for generated sources
-        }
-    }
-}
-
-tasks.withType(JavaCompile) {
-    options.annotationProcessorGeneratedSourcesDirectory = file('target/generated-sources/java')
-}
+//configurations {
+//    compileOnly {
+//        extendsFrom annotationProcessor
+//    }
+//}
+//
+//sourceSets {
+//    main {
+//        java {
+//            srcDir 'target/generated-sources/java' // Output directory for generated sources
+//        }
+//    }
+//}
+//
+//tasks.withType(JavaCompile) {
+//    options.annotationProcessorGeneratedSourcesDirectory = file('target/generated-sources/java')
+//}
