--- a/client/package.json
+++ b/client/package.json
@@ -15,12 +15,12 @@
     "@mui/material": "^5.15.4",
     "@tanstack/react-query": "^4.35.0",
     "@tanstack/react-query-devtools": "^4.35.0",
-    "@uiw/react-md-editor": "^3.6.0",
     "axios": "^1.6.7",
     "next": "14.0.4",
     "next-remove-imports": "^1.0.12",
     "react": "^18",
     "react-dom": "^18",
+    "react-quill": "^2.0.0",
     "styled-components": "^6.1.8"
   },
   "devDependencies": {
