--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -45,15 +45,15 @@ jobs:
     #     arguments: build
       #run : ./gradlew clean build
 
-    - name: Build with Gradle # Gradle에 대한 빌드 (일반적으로 기본 설정을 사용)
-      uses: gradle/gradle-build-action@bd5760595778326ba7f1441bcf7e88b49de61a25 # v2.6.0
+    - name: Build with Gradle
+      uses: gradle/gradle-build-action@v2.9.0
       with:
-        arguments: build
+        arguments: clean build
         build-root-directory: ./server
 
-    - name: Change directory to /server
-      run: |
-       chmod +x server/build/libs/thinker-0.0.1-SNAPSHOT.jar
+#    - name: Change directory to /server
+#      run: |
+#       chmod +x server/build/libs/thinker-0.0.1-SNAPSHOT.jar
 
     - name: Upload artifact
       uses: actions/upload-artifact@v2
