build: ci/cd 수정

--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -64,12 +64,12 @@ jobs:
         name: testServer
         path: server/build/libs # 배포에 활용할 경로
 
-    - name: SCP to prod server
+    - name: SCP to server
       uses: appleboy/scp-action@master
       with:
         username: ${{ secrets.SSH_USER }}
-        host: ${{ secrets.HOST }}
-        key: ${{ secrets.PRIVATE_KEY }}
+        host: ${{ secrets.SERVER_IP }}
+        key: ${{ secrets.SSH_PRIVATE_KEY }}
         source: "build/libs/*-SNAPSHOT.jar"
         target: "/home/ec2-user/server"
         strip_components: 2
