--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -55,7 +55,7 @@ jobs:
       uses: actions/download-artifact@v2
       with:
         name: testServer
-        path: ./ # 배포에 활용할 경로
+        path: ./app.jar # 배포에 활용할 경로
 
     - name: SCP to server
       uses: appleboy/scp-action@v0.1.7
@@ -63,7 +63,7 @@ jobs:
         username: ${{ secrets.SSH_USER }}
         host: ${{ secrets.SERVER_IP }}
         key: ${{ secrets.SSH_PRIVATE_KEY }}
-        source: "./thinker-0.0.1-SNAPSHOT.jar"
+        source: "./app.jar"
         target: "/home/ec2-user/server"
 
     - name: Deploy
